# SampleLibGit

./: CMakeLists.txt
libgit/lib/debug/: git2.exp  git2.lib
libgit/lib/release/: git2.lib
qml/: main.qml
sample/: main.cpp
src/: Repository.cpp  Repository.h  RepositoryProxy.cpp  RepositoryProxy.h  StatusFile.h
test/: GitClientTest.h  main.cpp
